# sms_verification

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/sms_verification_backend/: Cargo.toml  sms_verification_backend.did
src/sms_verification_backend/src/: lib.rs  sms_verification.rs
src/sms_verification_frontend/: package.json  vite.config.js
src/sms_verification_frontend/src/: App.jsx  main.jsx
src/sms_verification_frontend/src/OTP_verification/: OTP_verification.jsx  Phone_verification.jsx
