[package]
name = "sms_verification_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.17.2"
ic-cdk-macros = "0.17.2"
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21"
ic-cdk-timers = "0.6"
 
